<resources>
    <!-- main strings -->
    <string name="app_name">Twsela Driver</string>
    <string name="google_geo_api_key">AIzaSyDl2B55haMJGm7M5spnRzHR5EG8FwR_qMk</string>
    <string name="google_api_server_key">AIzaSyDtbjEEFybhBtR7Sl0wj6qXvUM9X2pim4s</string>
    <string name="currency">IQD</string>


    <!-- untranslated strings -->
    <string name="empty_string"></string>


    <!-- common strings -->
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unplug_mobile_cable_from_computer">Please unplug the mobile cable from the computer</string>
    <string name="install_or_update_google_play_services">Please install or update Google Play Services</string>
    <string name="search">Search</string>
    <string name="search_dotted">Search...</string>
    <string name="you_need_to_grant_required_permissions">You need to grant required permissions</string>
    <string name="no_camera_app_found_in_this_device">No camera app installed on this device</string>
    <string name="error_fetching_this_image">Error fetching this image</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="please_wait_dotted">Please wait...</string>
    <string name="no_data_found">No data found</string>
    <string name="failed_loading_data">Failed loading data</string>
    <string name="tap_to_refresh">Tap to refresh</string>
    <string name="connection_error">Connection error</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="close">Close</string>


    <!-- app strings -->
    <string name="twsela">Twsela</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_here">Login here</string>
    <string name="make_sure_of_username_and_password">Make sure you entered a valid username and password</string>
    <string name="go_online">Go Online</string>
    <string name="enable_internet_connection_to_use_app">Please enable internet connection to use the app</string>
    <string name="location_perm_refuse_msg">Sorry, you can\'t use the app without location permission</string>
    <string name="enable_gps_to_use_app">Please enable GPS to use the app</string>
    <string name="settings">Settings</string>
    <string name="gps_refuse_msg">Sorry, you can\'t use the app without GPS</string>
    <string name="go_offline">Go Offline</string>
    <string name="failed_changing_your_status">Failed changing your status</string>
    <string name="you_are_online">You are online</string>
    <string name="passenger_c">Passenger:</string>
    <string name="pickup_c">Pickup:</string>
    <string name="destination_c">Destination:</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="point_on_map">Point on map</string>
    <string name="failed_loading_details">Failed loading details</string>
    <string name="not_available">Not available</string>
    <string name="failed_accepting_request">Failed accepting request</string>
    <string name="your_driver_c">Your Driver:</string>
    <string name="trip_status_c">Trip Status:</string>
    <string name="in_your_way_to_pickup">In your way to pickup</string>
    <string name="your_driver_in_his_way_to_pickup">Your Driver in his way to pickup</string>
    <string name="you_have_arrived_to_pickup">You have arrived to pickup</string>
    <string name="your_driver_has_arrived_to_pickup">Your driver has arrived to pickup</string>
    <string name="enjoy_your_trip">Enjoy your trip</string>
    <string name="your_trip_has_started">Your trip has started</string>
    <string name="you_have_arrived">You have arrived</string>
    <string name="thanks_for_using_twsela">Thanks for using Twsela :)</string>
    <string name="in_your_way_to_destination">In your way to destination</string>
    <string name="your_trip">Your Trip</string>
    <string name="arrived">Arrived</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="failed_cancelling_trip">Failed cancelling trip</string>
    <string name="trip_cancelled_successfully">Trip cancelled successfully</string>
    <string name="start_trip">Start Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="failed_arriving">Failed arriving</string>
    <string name="arrived_successfully">Arrived successfully</string>
    <string name="failed_starting_trip">Failed starting trip</string>
    <string name="trip_started_successfully">Trip started successfully</string>
    <string name="failed_ending_trip">Failed ending trip</string>
    <string name="trip_ended_successfully">Trip ended successfully</string>
    <string name="logout">Logout</string>
    <string name="logout_q">Logout?</string>
    <string name="you_cant_logout_when_you_are_online">You can\'t logout when you are online</string>
    <string name="trip_duration_c">Trip Duration:</string>
    <string name="distance_c">Distance:</string>
    <string name="days">days</string>
    <string name="hrs">hrs</string>
    <string name="mins">mins</string>
    <string name="seconds">seconds</string>
    <string name="km">km</string>
    <string name="failed_calculating_distance">Failed calculating distance</string>
    <string name="couldnt_get_your_current_location">Couldn\'t get your current location</string>
    <string name="trip_fare_c">Trip Fare:</string>


    <!-- Arrays -->
</resources>
